2001-08-06  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc: Modified ::lt() so buttons on pillars show up in
	Test of Purity.

2001-08-06  Max Horn <max@quendi.de>
	* gumps/Gump_manager.cc/.h: added find_gump based on owner/shapenum
	* actors.cc/.h: added inventory_shapenum()
	* keyactions.cc: ActionStats/ActionInventory now work like they always should have

2001-08-06  Max Horn <max@quendi.de>
	* Stats_gump.cc fixed bug where you could drag items from the gump
	* actors.cc: fixed pick pocketing bug (pick pocket could be triggered by usecode events)
	* conf/XMLEntity.cc: small fix to correct what I broke before (<configconfigconfigconfig>)
	* actorio.cc, gumps/Spellbook_gump.cc: removed annoying unneeded output
	* audio/pcb.h, gamewin.h, usecode/intrinsics.cc: cleaned up debug message output

2001-08-06  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Fixed stairway crash (world-wrapping problem).

2001-08-05  Max Horn <max@quendi.de>
	* audio/midi_drivers: changed Makefile.am
	* audio/midi_drivers/forked_player.cc:  removed the unuses "../.." stuff
	* usecode/ucinternal.h: added "class Barge_object;"
	* exult.h: added some "class XYZ;"

2001-08-05  Max Horn <max@quendi.de>
	* audio/Audio.cc, cheat.cc: properly uses Game::get_gametitle() now
	* game.cc: tweaked source a bit
	* exult_constants.h: changed #if DEBUG to #ifdef DEBUG to match rest of exult
	* mac: ExultHeaders.pch fixed

2001-08-05  Max Horn <max@quendi.de>
	* keys.cc, gumps/Gamemenu.cc: added forgotten #include "exult.h"

2001-08-05  Max Horn <max@quendi.de>
	* shapes/bodies.cc/h: moved Is_body from gamewin.cc to here
	* bggame.cc: added missing prototypes (making compiler happy)
	* exult.h: added, allowed to remove "extern ..." in many files
	* various files: updated legal headers; removed extern's; and other clean up

2001-08-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: compiles on Linux again

2001-08-05  Max Horn <max@quendi.de>